--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
+  "semi": false,
+  "useTabs": false,
   "singleQuote": true,
   "trailingComma": "all",
+  "printWidth": 120,
+  "tabWidth": 2
   "overrides": [
     {
       "files": "*.ts",
